--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomePage"
+        <activity android:name=".OTPpage"></activity>
+        <activity
+            android:name=".HomePage"
             android:label="@string/pPeep"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
-
-
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name=".SignUpPage" />
         <activity android:name=".LogInPage" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
