--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 repositories {
     maven {
         url "https://jitpack.io"
+
     }
 }
 
@@ -35,7 +36,7 @@ dependencies {
     //For PinView EditText
     implementation 'com.chaos.view:pinview:1.3.2'
     //For playing .gif images
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
