--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OTPpage"></activity>
+        <activity android:name=".VerificationComplete"></activity>
+        <activity android:name=".TermsConditions" />
+        <activity android:name=".OTPpage" />
         <activity
             android:name=".HomePage"
             android:label="@string/pPeep"
