--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
     }
 }
 repositories {
+    jcenter()
     maven {
         url "https://jitpack.io"
 
@@ -38,6 +39,7 @@ dependencies {
     //For playing .gif images
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.facebook.android:account-kit-sdk:5.+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
