--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.ppeepfinal"
         minSdkVersion 21
@@ -32,14 +33,15 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    //For Step View
-    implementation 'com.shuhart.stepview:stepview:1.2.8'
-    //For PinView EditText
-    implementation 'com.chaos.view:pinview:1.3.2'
-    //For playing .gif images
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    implementation 'com.shuhart.stepview:stepview:1.2.8' //For Step View
+    implementation 'com.chaos.view:pinview:1.3.2'//For PinView EditText
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17' //For playing .gif images
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.facebook.android:account-kit-sdk:5.+'
+    implementation 'com.facebook.android:account-kit-sdk:5.+' //facebook account kit sdk
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'//retrofit api communication
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    implementation 'com.google.code.gson:gson:2.8.5'//gson for retrofit
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
