--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".InputDetails"></activity>
+        <activity android:name=".WebViewClass"></activity>
+        <activity android:name=".InputDetails" />
         <activity android:name=".VerificationComplete" />
         <activity android:name=".TermsConditions" />
         <activity android:name=".OTPpage" />
@@ -33,7 +34,7 @@
         <activity
             android:name=".HomePage"
             android:label="@string/pPeep"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/AppTheme2" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
