--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,12 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17' //For playing .gif images
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.facebook.android:account-kit-sdk:5.+' //facebook account kit sdk
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'//retrofit api communication
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
-    //implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
-    implementation 'com.google.code.gson:gson:2.8.5'//gson for retrofit
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.markushi:circlebutton:1.1'
     implementation 'com.github.varunest:sparkbutton:1.0.6'
