--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".CheckoutCart"></activity>
+        <activity android:name=".RestaurantMenuPage"></activity>
+        <activity android:name=".CheckoutCart" />
         <activity android:name=".TabFragmentOffer" />
         <activity android:name=".TabFragmentPopular" />
         <activity android:name=".TabFragmentNearby" />
