--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".FoodCartPage"></activity>
+        <activity android:name=".PreOrderPage"></activity>
+        <activity android:name=".FoodCartPage" />
         <activity android:name=".RestaurantMenuPage" />
         <activity android:name=".CheckoutCart" />
         <activity android:name=".TabFragmentOffer" />
