--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.Hitomis:CircleMenu:v1.1.0'
     implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
 }
