--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PreOrderPage"></activity>
+        <activity android:name=".HelpPage"></activity>
+        <activity android:name=".PromotionPage" />
+        <activity android:name=".HistoryPage" />
+        <activity android:name=".ProfileEdit" />
+        <activity android:name=".PreOrderPage" />
         <activity android:name=".FoodCartPage" />
         <activity android:name=".RestaurantMenuPage" />
         <activity android:name=".CheckoutCart" />
