--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.github.Hitomis:CircleMenu:v1.1.0'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.android.support:design:28.0.0-alpha1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
 
