--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,32 +28,53 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    implementation 'androidx.room:room-runtime:2.0.0-rc01'
+    annotationProcessor 'androidx.room:room-compiler:2.0.0-rc01'
+
+
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:design:28.0.0'
+    //implementation 'com.android.support:cardview-v7:28.0.0'
+   // implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //implementation 'com.android.support:design:28.0.0-alpha1'
+
+    testImplementation 'junit:junit:4.12'
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.shuhart.stepview:stepview:1.2.8' //For Step View
     implementation 'com.chaos.view:pinview:1.3.2'//For PinView EditText
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17' //For playing .gif images
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.facebook.android:account-kit-sdk:5.+' //facebook account kit sdk
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
     implementation 'com.github.markushi:circlebutton:1.1'
     implementation 'com.github.varunest:sparkbutton:1.0.6'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.github.smarteist:autoimageslider:1.2.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.github.Hitomis:CircleMenu:v1.1.0'
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    implementation 'com.android.support:design:28.0.0-alpha1'
+
     implementation 'com.github.cdflynn:checkview:v1.1'
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    //implementation "android.arch.persistence.room:runtime:1.1.1"
+
+    //annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
 
 }
