--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven {
+            url "https://jitpack.io"
+
+        }
     }
 }
 
