--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+
+    implementation 'com.pusher:pusher-java-client:1.5.0'
+
 }
