--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
@@ -24,7 +25,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".CurrentOrderHistory"></activity>
+        <activity android:name=".OrderOnGoingList"></activity>
+        <activity android:name=".CurrentOrderHistory" />
         <activity android:name=".FriendHistoryDetails" />
         <activity android:name=".UserMapActivity" />
         <activity android:name=".GroupFriendAdd" />
