--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".OrderOnGoingList"></activity>
+        <activity android:name=".CuisineSearchFragment"></activity>
+        <activity android:name=".OrderOnGoingList" />
         <activity android:name=".CurrentOrderHistory" />
         <activity android:name=".FriendHistoryDetails" />
         <activity android:name=".UserMapActivity" />
