--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-
-        <activity android:name=".CuisineSearchFragment"></activity>
-        <activity android:name=".UserAutoCompleteAdress"></activity>
+        <activity android:name=".PPeepRideWebview"></activity>
+        <activity android:name=".CuisineSearchFragment" />
+        <activity android:name=".UserAutoCompleteAdress" />
         <activity android:name=".OrderOnGoingList" />
         <activity android:name=".CurrentOrderHistory" />
         <activity android:name=".FriendHistoryDetails" />
