bottom sliding drawer + search page view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation 'com.google.firebase:firebase-inappmessaging-display:18.0.2'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
 
 }
