--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
-
+    implementation 'com.github.vipulasri:timelineview:1.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
