--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.github.Mohammad-Faisal:DingiTelemetry:1.5'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
 
 
     implementation 'com.pusher:pusher-java-client:1.5.0'
